--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
    <div id="root"></div>
+   <div id='containerData'></div>
   <script type="module" src="main.js"></script>
    <div id="container"></div>
 </body>
